added transaction_id in order details view

--- a/app/design/adminhtml/base/default/template/easycredit/info.phtml
+++ b/app/design/adminhtml/base/default/template/easycredit/info.phtml
@@ -1,5 +1,5 @@
 <p>
     <strong><?php echo $this->getMethod()->getTitle() ?></strong><br />
 
-    <?php echo $this->getInfoAdditionalData('redemption_plan'); ?><br />
+    <strong>Transaktions-Nr:</strong> <?php echo $this->getInfoAdditionalData('transaction_id'); ?><br />
 </p>
