added linkout instead of js note; corrected umlauts

--- a/app/design/frontend/base/default/template/easycredit/form.phtml
+++ b/app/design/frontend/base/default/template/easycredit/form.phtml
@@ -18,7 +18,7 @@
                 <p>Datenübermittlung Ratenkauf by easyCredit</p>
                 <p>
                     <label for="easycredit-agreement">
-                            <input type="checkbox" class="required-entry" id="easycredit-agreement" /> Ja, ich möchte per Ratenkauf zahlen und willige ein, dass die <?php echo $this->getStoreName(); ?> der TeamBank AG (Partner der Genossenschaftlichen FinanzGruppe Volksbanken Raiffeisenbanken), Beuthener Str. 25, 90471 Nürnberg zur Identitäts- und Bonitätsprüfung sowie Betrugsprävention Anrede und Name, Geburtsdatum und -ort, Kontaktdaten (Adresse, Telefon, E-Mail) sowie Angaben zur aktuellen und zu früheren Bestellungen übermittelt und das Prüfungsergebnis zu diesem Zweck erhält.
+                            <input type="checkbox" class="required-entry" id="easycredit-agreement" /> Ja, ich möchte per Ratenkauf zahlen und willige ein, dass die <?php echo $this->getStoreName(); ?> der TeamBank AG (Partner der Genossenschaftlichen FinanzGruppe Volksbanken Raiffeisenbanken), Beuthener Str. 25, 90471 Nürnberg zur Identitäts- und Bonitätsprüfung sowie Betrugsprävention Anrede und Name, Geburtsdatum und -ort, Kontaktdaten (Adresse, Telefon, E-Mail) sowie Angaben zur aktuellen und zu früheren Bestellungen übermittelt und das Prüfungsergebnis zu diesem Zweck erhält.
                     </label>
                 </p>
 
