added popup window for what is easycredit

--- a/app/design/frontend/base/default/template/easycredit/method_title.phtml
+++ b/app/design/frontend/base/default/template/easycredit/method_title.phtml
@@ -2,7 +2,7 @@
     <img src="<?php echo $this->getSkinUrl('images/easycredit/rk.png'); ?>" height="35" />
     <span class="easycredit-description">
 
-        <a href="https://www.easycredit.de/Ratenkauf.htm" target="_blank" class="easycredit-tooltip">Was ist Ratenkauf by easyCredit?</a>
+        <a href="https://www.easycredit.de/Ratenkauf.htm" onclick="javascript:window.open('https://www.easycredit.de/Ratenkauf.htm','whatiseasycredit','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, ,left=0, top=0, width=800, height=600'); return false;" class="easycredit-tooltip">Was ist Ratenkauf by easyCredit?</a>
     </span>
 </div>
 <style>
