--- a/app/design/frontend/base/default/template/easycredit/method_title.phtml
+++ b/app/design/frontend/base/default/template/easycredit/method_title.phtml
@@ -1,5 +1,5 @@
 <div class="easycredit-container">
-    <img src="<?php echo $this->getSkinUrl('images/easycredit/rk.png'); ?>" height="35" />
+    <img src="https://static.easycredit.de/content/image/logo/ratenkauf_42_55.png" height="35" />
     <span class="easycredit-description">
 
         <a href="https://www.easycredit.de/Ratenkauf.htm" onclick="javascript:window.open('https://www.easycredit.de/Ratenkauf.htm','whatiseasycredit','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, ,left=0, top=0, width=800, height=600'); return false;" class="easycredit-tooltip">Was ist Ratenkauf by easyCredit?</a>
