closes #3073: pre contract information url is only shown as long as transaction is not captured/confirmed

--- a/app/design/frontend/base/default/template/easycredit/info.phtml
+++ b/app/design/frontend/base/default/template/easycredit/info.phtml
@@ -2,9 +2,10 @@
     <strong><?php echo $this->getMethod()->getTitle() ?></strong><br />
 
     <?php echo $this->getInfoAdditionalData('redemption_plan'); ?><br />
-    <a href="<?php echo $this->getInfoAdditionalData('pre_contract_information_url'); ?>" target="_blank">Vorvertragliche Informationen zum Ratenkauf hier abrufen</a>
 
-    <?php /*if ($this->getMethod()->getConfigData('infotext_overview')): ?>
-        <?php echo $this->getMethod()->getConfigData('infotext_overview') ?><br />
-    <?php endif;*/ ?>
+    <?php if ($this->getInfoAdditionalData('is_captured')) : ?>
+    <strong>Transaktions-Nr:</strong> <?php echo $this->getInfoAdditionalData('transaction_id'); ?><br />
+    <?php else: ?>
+    <a href="<?php echo $this->getInfoAdditionalData('pre_contract_information_url'); ?>" target="_blank">Vorvertragliche Informationen zum Ratenkauf hier abrufen</a>
+    <?php endif; ?>
 </p>
