--- a/app/design/frontend/base/default/layout/easycredit.xml
+++ b/app/design/frontend/base/default/layout/easycredit.xml
@@ -36,9 +36,23 @@
 
             </block>
         </reference>
-        <!-- reference name="head">
-            <action method="addItem"><type>skin_js</type><name>js/checkout/review.js</name></action>
-        </reference -->
         <block type="core/text_list" name="additional.product.info" />
     </easycredit_checkout_review>
+
+    <sales_email_order_items>
+        <reference name="order_totals">
+            <block type="easycredit/sales_order_totals_fee" name="interest">
+                <action method="setFieldName"><f>easycredit_amount</f></action>
+            </block>
+        </reference>
+    </sales_email_order_items>
+
+    <sales_email_order_invoice_items>
+        <reference name="invoice_totals">
+            <block type="easycredit/sales_order_totals_fee" name="interest">
+                <action method="setFieldName"><f>easycredit_amount_invoiced</f></action>
+            </block>
+        </reference>
+    </sales_email_order_invoice_items>
+
 </layout>
