refs #3052: first implementation of model calculation js plugin

--- a/app/design/frontend/base/default/layout/easycredit.xml
+++ b/app/design/frontend/base/default/layout/easycredit.xml
@@ -70,4 +70,12 @@
             </block> 
         </reference>
     </sales_order_print>
+
+    <default>
+
+        <block type="core/template" name="easycredit.pp-plugin" template="easycredit/pp-plugin.phtml"/>
+        <reference name="before_body_end">
+            <action method="append" ifconfig="payment/easycredit/widget_enabled"><block>easycredit.pp-plugin</block></action>        
+        </reference>
+    </default>
 </layout>
