--- a/app/design/frontend/base/default/template/easycredit/form.phtml
+++ b/app/design/frontend/base/default/template/easycredit/form.phtml
@@ -1,29 +1,40 @@
+<?php
+$t = $this->getTextConsent();
+$textConsent = $t['text'];
+$textConsentError = $t['error'];
+?>
+
+
 <fieldset class="form-list">
     <ul id="payment_form_<?php echo $this->getMethodCode(); ?>" style="display:none">
         <li>
             <div class="input-box">
+                <?php if ($error = $this->checkAvailability() || $textConsentError) : ?>
 
-                <?php if ($error = $this->checkAvailability()) : ?>
 
-                <?php echo $error; ?>
+                    <?php echo $error; ?>
 
-                <script>
-                var radio = $('p_method_easycredit');
-                radio.disabled = true;
-                radio.checked = false;
-                radio.siblings('label')[0].down('img').addClassName('easycredit-disabled');
-                $('payment_form_easycredit').show();
-                </script>
+                    <?php echo $textConsent; ?>
+
+                    <script>
+                        var radio = $('p_method_easycredit');
+                        radio.disabled = true;
+                        radio.checked = false;
+                        radio.siblings('label')[0].down('img').addClassName('easycredit-disabled');
+                        $('payment_form_easycredit').show();
+                    </script>
 
                 <?php else: ?>
 
-                <p>Datenübermittlung Ratenkauf by easyCredit</p>
-                <p>
-                    <label for="easycredit-agreement">
-                            <input type="checkbox" class="required-entry" id="easycredit-agreement" /> Ja, ich möchte per Ratenkauf zahlen und willige ein, dass die <?php echo $this->getStoreName(); ?> der TeamBank AG (Partner der Genossenschaftlichen FinanzGruppe Volksbanken Raiffeisenbanken), Beuthener Str. 25, 90471 Nürnberg zur Identitäts- und Bonitätsprüfung sowie Betrugsprävention Anrede und Name, Geburtsdatum und -ort, Kontaktdaten (Adresse, Telefon, E-Mail) sowie Angaben zur aktuellen und zu früheren Bestellungen übermittelt und das Prüfungsergebnis zu diesem Zweck erhält.
-                    </label>
-                </p>
-
+                    <div id="easycredit-agreement-block">
+                        <p>Datenübermittlung Ratenkauf by easyCredit</p>
+                        <p>
+                            <label for="easycredit-agreement">
+                                <input type="checkbox" class="required-entry" id="easycredit-agreement"/>
+                                <span id="easycredit-agreement-text"><?php echo $this->escapeHtml($textConsent); ?></span>
+                            </label>
+                        </p>
+                    </div>
                 <?php endif; ?>
             </div>
         </li>
