rk plugin only on detail page

--- a/app/design/frontend/base/default/layout/easycredit.xml
+++ b/app/design/frontend/base/default/layout/easycredit.xml
@@ -71,11 +71,10 @@
         </reference>
     </sales_order_print>
 
-    <default>
-
+    <catalog_product_view>
         <block type="core/template" name="easycredit.pp-plugin" template="easycredit/pp-plugin.phtml"/>
         <reference name="before_body_end">
             <action method="append" ifconfig="payment/easycredit/widget_enabled"><block>easycredit.pp-plugin</block></action>        
         </reference>
-    </default>
+    </catalog_product_view>
 </layout>
