fixes: duplicate wigdets shown in some environments;\nfixes: paypal express checkout not usable

--- a/src/app/design/frontend/base/default/template/easycredit/pp-plugin.phtml
+++ b/src/app/design/frontend/base/default/template/easycredit/pp-plugin.phtml
@@ -60,7 +60,7 @@
             priceBox.append('<div class="easycredit-widget-container">');
         }
 
-        var container = priceBox.find('.easycredit-widget-container');
+        var container = priceBox.find('.easycredit-widget-container').empty();
         container.rkPaymentPage({
             webshopId : '<?php echo Mage::getStoreConfig('payment/easycredit/api_key'); ?>',
             amount: amount
