--- a/src/app/design/frontend/base/default/layout/easycredit.xml
+++ b/src/app/design/frontend/base/default/layout/easycredit.xml
@@ -3,16 +3,10 @@
 
     <default>
         <reference name="head">
-            <action method="addItem"><type>skin_css</type><name>css/easycredit/easycredit.css</name></action>
+            <action method="addItem"><type>skin_css</type><name>css/easycredit/easycredit.min.css</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/easycredit/easycredit.min.js</name></action>
         </reference>
     </default>
-
-    <catalog_product_view>
-        <reference name="head">
-            <action method="addItem"><type>skin_js</type><name>js/easycredit/easycredit-widget.js</name></action>
-            <action method="addItem"><type>skin_css</type><name>css/easycredit/easycredit-widget.css</name></action>
-        </reference>
-    </catalog_product_view>
 
     <easycredit_checkout_review translate="label">
         <label>EasyCredit Order Review Form</label>
