--- a/src/app/design/adminhtml/base/default/layout/easycredit.xml
+++ b/src/app/design/adminhtml/base/default/layout/easycredit.xml
@@ -1,46 +1,57 @@
 <?xml version="1.0"?>
 <layout version="0.1.0">
+    <easycredit_tx_manager>
+        <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>easycredit/css/app.css</name></action>
+            <action method="addItem"><type>skin_js</type><name>easycredit/js/app.js</name></action>
+        </reference>
+    </easycredit_tx_manager>
+
     <adminhtml_sales_order_view>
+        <update handle="easycredit_tx_manager" />
+
         <reference name="order_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
-            <block type="adminhtml/sales_order_totals_item" name="easycredit.refunded" template="easycredit/sales/order/refunded.phtml">
-                <action method="setDisplayArea"><area>footer</area></action>
-                <action method="setAfterCondition"><condition>last</condition></action>
-            </block>
         </reference>
     </adminhtml_sales_order_view>
-
+    
     <adminhtml_sales_order_invoice_new>
+        <update handle="easycredit_tx_manager" />
         <reference name="invoice_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
         </reference>
     </adminhtml_sales_order_invoice_new>
 
     <adminhtml_sales_order_invoice_updateqty>
+        <update handle="easycredit_tx_manager" />
         <reference name="invoice_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
         </reference>
     </adminhtml_sales_order_invoice_updateqty>
 
     <adminhtml_sales_order_invoice_view>
+        <update handle="easycredit_tx_manager" />
         <reference name="invoice_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
         </reference>
     </adminhtml_sales_order_invoice_view>
 
     <adminhtml_sales_order_creditmemo_new>
+        <update handle="easycredit_tx_manager" />
         <reference name="creditmemo_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
         </reference>
     </adminhtml_sales_order_creditmemo_new>
-
+     
     <adminhtml_sales_order_creditmemo_updateqty>
+        <update handle="easycredit_tx_manager" />
         <reference name="creditmemo_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit" template="easycredit/sales/order/total.phtml" />
         </reference>
     </adminhtml_sales_order_creditmemo_updateqty>
 
     <adminhtml_sales_order_creditmemo_view>
+        <update handle="easycredit_tx_manager" />
         <reference name="creditmemo_totals">
             <block type="adminhtml/sales_order_totals_item" name="easycredit.refunded" template="easycredit/sales/order/refunded.phtml">
                 <action method="setDisplayArea"><area>footer</area></action>
