fix endless loop when trigger_recollect = 1; add sort_order for payment method; add title for review page

--- a/src/app/design/frontend/base/default/layout/easycredit.xml
+++ b/src/app/design/frontend/base/default/layout/easycredit.xml
@@ -15,6 +15,7 @@
 
         <reference name="head">
             <action method="addItem"><type>skin_js</type><name>js/opcheckout.js</name></action> 
+            <action method="setTitle"><title>Checkout Review</title></action>
         </reference>
 
         <reference name="root">
