--- a/src/app/design/frontend/base/default/template/easycredit/checkout/review.phtml
+++ b/src/app/design/frontend/base/default/template/easycredit/checkout/review.phtml
@@ -1,3 +1,6 @@
+<?php
+$helper = Mage::helper('checkout');
+?>
 <script>
 Review.prototype.save = function(){
     if (checkout.loadWaiting!=false) return;
@@ -23,7 +26,7 @@ var checkout = new Checkout({sections:[]},{});
 </script>
 
 <div class="page-title">
-    <h1><?php echo $this->__('Review Order') ?></h1>
+    <h1><?php echo $helper->__('Review Order') ?></h1>
 </div>
 <?php echo $this->getMessagesBlock()->toHtml() ?>
 
@@ -31,7 +34,7 @@ var checkout = new Checkout({sections:[]},{});
     <div class="col-1">
         <div class="box">
             <div class="box-title">
-                <h3><?php echo $this->__('Billing Address') ?></h3>
+                <h3><?php echo $helper->__('Billing Address') ?></h3>
             </div>
             <div class="box-content">
                 <address><?php echo $this->getBilling()->format('html');?></address>
@@ -42,7 +45,7 @@ var checkout = new Checkout({sections:[]},{});
     <div class="col-2">
         <div class="box">
             <div class="box-title">
-                <h3><?php echo $this->__('Shipping Address') ?></h3>
+                <h3><?php echo $helper->__('Shipping Address') ?></h3>
             </div>
             <div class="box-content">
                 <address><?php echo $this->getShipping()->format('html');?></address>
@@ -55,7 +58,7 @@ var checkout = new Checkout({sections:[]},{});
     <div class="col-1">
         <div class="box">
             <div class="box-title">
-                <h3><?php echo $this->__('Payment Method') ?></h3>
+                <h3><?php echo $helper->__('Payment Method') ?></h3>
             </div>
             <div class="box-content">
                 <?php echo $this->getPaymentHtml() ?>
@@ -66,7 +69,7 @@ var checkout = new Checkout({sections:[]},{});
     <div class="col-2">
         <div class="box">
             <div class="box-title">
-                <h3><?php echo $this->__('Shipping Method') ?></h3>
+                <h3><?php echo $helper->__('Shipping Method') ?></h3>
             </div>
             <div class="box-content">
 
@@ -81,7 +84,7 @@ var checkout = new Checkout({sections:[]},{});
                     <?php echo $_excl; ?>
                     <?php endif; ?>
                 <?php if ($this->helper('tax')->displayShippingBothPrices() && $_incl != $_excl): ?>
-                    (<?php echo $this->__('Incl. Tax'); ?> <?php echo $_incl; ?>)
+                    (<?php echo $helper->__('Incl. Tax'); ?> <?php echo $_incl; ?>)
                     <?php endif; ?>
 
                 <?php endif; ?>
@@ -92,7 +95,7 @@ var checkout = new Checkout({sections:[]},{});
 </div>
 
 <div class="info-set">
-    <h2 class="legend"><?php echo $this->__('Products') ?></h2>
+    <h2 class="legend"><?php echo $helper->__('Products') ?></h2>
     <?php echo $this->getChildHtml('details') ?>
 </div>
 
