updated api library to 1.4.0; use composer for api library; integrate click & collect functionality

--- a/src/app/design/adminhtml/base/default/template/easycredit/system/config/clickandcollect_intro.phtml
+++ b/src/app/design/adminhtml/base/default/template/easycredit/system/config/clickandcollect_intro.phtml
@@ -91,7 +91,7 @@
     <p>
     Wichtig für Sie ist, dass Sie bei Nutzung von Click&Collect sicherstellen müssen, dass das gekaufte Produkt ausschließlich an den Vertragspartner übergeben wird. Die Verantwortung für die korrekte Übergabe liegt bei Ihnen als Händler.
     </p>
-    <p>Bitte stellen Sie im Folgenden die Versandart mit der Sie Click&Collect anbieten ein:</p>
+    <p>Bitte stellen Sie im Folgenden die Versandart, mit der Sie Click&Collect anbieten, ein:</p>
 </div>
 <style>
 .easycredit-click-and-collect-intro p {
