remove static duration; refs #3934: include firstname & lastname in address comparison; updated api lib to v1.6

--- a/src/app/design/frontend/base/default/template/easycredit/info.phtml
+++ b/src/app/design/frontend/base/default/template/easycredit/info.phtml
@@ -3,9 +3,9 @@
         <span><?php echo $this->getMethod()->getTitle() ?></span>
     </div>
     <strong>Einfach. Fair. In Raten zahlen.</strong><br />
-    <?php echo $this->getInfoAdditionalData('payment_plan'); ?>
+    <?php echo $this->getPaymentPlan(); ?>
 
     <?php if ($this->getInfoAdditionalData('is_captured')) : ?>
-    <p><strong>Transaktions-Nr:</strong> <?php echo $this->getInfoAdditionalData('transaction_id'); ?></p>
+    <p><strong>Transaktions-Nr:</strong> <?php echo $this->escapeHtml($this->getInfoAdditionalData('transaction_id')); ?></p>
     <?php endif; ?>
 </p>
